Mona0.3.0alpha6 back ported

--- a/Mona/samples/Makefile
+++ b/Mona/samples/Makefile
@@ -1,24 +1,24 @@
 all:
 	@cd non-gui && $(MAKE) $@
 	@cd gui && $(MAKE) $@
-	@cd java && $(MAKE) $@
+#	@cd java && $(MAKE) $@
 
 install:
 	@cd non-gui && $(MAKE) $@
 	@cd gui && $(MAKE) $@
-	@cd java && $(MAKE) $@
+#	@cd java && $(MAKE) $@
 
 clean:
 	@cd non-gui && $(MAKE) $@
 	@cd gui && $(MAKE) $@
-	@cd java && $(MAKE) $@
+#	@cd java && $(MAKE) $@
 
 depend:
 	@cd non-gui && $(MAKE) $@
 	@cd gui && $(MAKE) $@
-	@cd java && $(MAKE) $@
+#	@cd java && $(MAKE) $@
 
 distclean:
 	@cd non-gui && $(MAKE) $@
 	@cd gui && $(MAKE) $@
-	@cd java && $(MAKE) $@
+#	@cd java && $(MAKE) $@
