--- a/contrib_0.3/Graphics/Mesa-gears/Makefile
+++ b/contrib_0.3/Graphics/Mesa-gears/Makefile
@@ -5,7 +5,7 @@ INSTDIR = $(BINDIR)/APPS
 
 SHAREDIR   = $(MONADIR)/share
 ifneq ($(BUILD_TARGET),ELF)
-include $(SHAREDIR)/configs/monapi-exe.inc
+include $(SHAREDIR)/configs/monapi-ex5.inc
 else
 include $(SHAREDIR)/configs/monapi-el5.inc
 endif
