--- a/contrib_0.3/Net/mones2/Makefile
+++ b/contrib_0.3/Net/mones2/Makefile
@@ -3,7 +3,7 @@ SOURCES = main.cpp NE2000.cpp NicFactory.cpp NicServer.cpp
 
 INSTDIR = $(BINDIR)/APPS
 
-ADDLINK    = -lnicdrv -lPci -lmonalibc# -lmonapi2-imp
+ADDLINK    = -lnicdrv -lPci -lmonalibc
 ADDLINKDEP = $(MONADIR)/lib/libmonalibc.a
 
 SHAREDIR   = $(MONADIR)/share
