PCL.DLL -> PCI.DLL

--- a/contrib_0.3/Sysutils/libPci/Makefile
+++ b/contrib_0.3/Sysutils/libPci/Makefile
@@ -7,8 +7,8 @@ include $(MONADIR)/share/configs/monapi.inc
 
 ifneq ($(BUILD_TARGET),ELF)
 LIB_IMPORT   = libPci-imp.a
-LIB_DYNAMIC  = PCL.DLL
-LIB_DYNAMIC5 = PCL.DL5
+LIB_DYNAMIC  = PCI.DLL
+LIB_DYNAMIC5 = PCI.DL5
 TARGET      += $(LIB_IMPORT) $(LIB_DYNAMIC) $(LIB_DYNAMIC5)
 endif
 
