*** empty log message ***

--- a/MonaNew/config/configs/mingw.env
+++ b/MonaNew/config/configs/mingw.env
@@ -7,7 +7,7 @@ STRIP    = strip
 AR       = ar cvru
 RANLIB   = ranlib
 INSTALL  = cp -u
-CFLAGS   = -nostdlib -fno-builtin -Wall -O3 -DMONA -DDEBUG_BUILD -DHOST_MINGW
+CFLAGS   = -nostdlib -fno-builtin -Wall -O3 -DMONA -DDEBUG_BUILD -DHOST_MINGW -U_WIN32 -UWIN32
 CXXFLAGS = $(CFLAGS) -fno-exceptions -fno-rtti
 NFLAGS   = -I $(MONADIR)/include/ -f win32
 OSTYPE   = `uname -sr`
