--- a/MonaNew/config/configs/mingw.env
+++ b/MonaNew/config/configs/mingw.env
@@ -6,7 +6,7 @@ LD       = ld
 STRIP    = strip
 AR       = ar cvru
 RANLIB   = ranlib
-INSTALL  = cp -u
+INSTALL  = install
 CFLAGS   = -nostdlib -fno-builtin -Wall -O3 -DMONA -DDEBUG_BUILD -DHOST_MINGW -U_WIN32 -UWIN32
 CXXFLAGS = $(CFLAGS) -fno-exceptions -fno-rtti
 NFLAGS   = -I $(MONADIR)/include/ -f win32
