--- a/MonaNew/config/configs/mingw.env
+++ b/MonaNew/config/configs/mingw.env
@@ -12,6 +12,7 @@ CXXFLAGS = $(CFLAGS) -fno-exceptions -fno-rtti
 NFLAGS   = -I $(MONADIR)/include/ -f win32
 OSTYPE   = `uname -sr`
 EXEEXT   = .exe
+CSCFLAGS = -o
 
 SYMPREFIX = _
 USER_START_FUNCTION = _user_start
