--- a/MonaNew/config/configs/mingw.env
+++ b/MonaNew/config/configs/mingw.env
@@ -7,7 +7,8 @@ STRIP    = strip
 AR       = ar cvru
 RANLIB   = ranlib
 INSTALL  = install
-CFLAGS   = -nostdlib -fno-builtin -Wall -O3 -DMONA -DDEBUG_BUILD -DHOST_MINGW -U_WIN32 -UWIN32
+CFLAG_DEFS = -DHOST_MINGW
+CFLAGS   = -nostdlib -fno-builtin -Wall -O3 -DMONA -DDEBUG_BUILD -U_WIN32 -UWIN32 $(CFLAG_DEFS) 
 CXXFLAGS = $(CFLAGS) -fno-exceptions -fno-rtti
 NFLAGS   = -I $(MONADIR)/include/ -f win32
 OSTYPE   = `uname -sr`
