--- a/contrib_0.3/Net/libnet/sample/giko/Makefile
+++ b/contrib_0.3/Net/libnet/sample/giko/Makefile
@@ -1,6 +1,8 @@
 TARGET  = GIKO
 SOURCES = giko.cpp TopLabel.cpp StringHelper.cpp
-INSTDIR = $(BINDIR)/APPS/BAYGUI
+INSTDIR = $(BINDIR)/APPS/BAYGUI/GIKO.APP
+INSTFILES = FAVICON.BMP
+
 
 SHAREDIR   = $(MONADIR)/share
 ifneq ($(BUILD_TARGET),ELF)
