--- a/Mona/apps/gui/MonaDat/Makefile
+++ b/Mona/apps/gui/MonaDat/Makefile
@@ -5,7 +5,7 @@ SOURCES = \
 	./SheetTab.cpp
 
 INSTDIR    = $(BINDIR)/iso/APPS/MONAFRMS/$(TARGET).APP
-INSTFILES  = dat/MONALOGO.BM2 dat/02.DT2 dat/03.DT2 dat/04.DT2 dat/05.DT2 dat/06.DT2 dat/07.DT2 dat/08.DT2 dat/09.DT2 dat/10.DT2 dat/11.DT2
+INSTFILES  = dat/MONALOGO.BM5 dat/02.DT5 dat/03.DT5 dat/04.DT5 dat/05.DT5 dat/06.DT5 dat/07.DT5 dat/08.DT5 dat/09.DT5 dat/10.DT5 dat/11.DT5
 CLEANFILES = $(INSTFILES)
 
 MONADIR = ../../..
@@ -23,11 +23,16 @@ CXXFLAGS += -DDEBUG
 
 $(TARGET).EXE: $(LIBDIR)/libgui.a $(INSTFILES)
 
-.SUFFIXES: .dat .DT2
-.dat.DT2:
-	bzip2 -c $< > $@
+#.SUFFIXES: .dat .DT2
+#.dat.DT2:
+#	bzip2 -c $< > $@
+.SUFFIXES: .dat .DT5
+.dat.DT5:
+	$(MONADIR)/bin/bim2bin in:$< out:$@ -osacmp -tek5 BS:0 eprm:z0
 
-dat/MONALOGO.BM2: dat/MonaLogo.bmp
-	bzip2 -c $< > $@
+#dat/MONALOGO.BM2: dat/MonaLogo.bmp
+#	bzip2 -c $< > $@
+dat/MONALOGO.BM5: dat/MonaLogo.bmp
+	$(MONADIR)/bin/bim2bin in:$< out:$@ -osacmp -tek5 BS:0 eprm:z0
 
 include dependencies
