--- a/contrib_0.3/Graphics/jpegview/Makefile
+++ b/contrib_0.3/Graphics/jpegview/Makefile
@@ -1,5 +1,5 @@
-TARGET  = JPEGDEMO
-SOURCES = jpegdemo.cpp
+TARGET  = JPEGVIEW
+SOURCES = jpegview.cpp
 INSTDIR = $(BINDIR)/APPS
 
 SHAREDIR   = $(MONADIR)/share
