--- a/contrib_0.3/Sysutils/libPci/Makefile
+++ b/contrib_0.3/Sysutils/libPci/Makefile
@@ -1,23 +1,24 @@
-LIB_STATIC   = libPci.a
+LIB_STATIC   = libpci.a
 TARGET       = $(LIB_STATIC)
 
 include $(MONADIR)/share/configs/Makefile.inc
 include $(MONADIR)/share/configs/dirnames.inc
-include $(MONADIR)/share/configs/monapi.inc
 
 ifneq ($(BUILD_TARGET),ELF)
-LIB_IMPORT   = libPci-imp.a
+LIB_IMPORT   = libpci-imp.a
 LIB_DYNAMIC  = PCI.DLL
 LIB_DYNAMIC5 = PCI.DL5
 TARGET      += $(LIB_IMPORT) $(LIB_DYNAMIC) $(LIB_DYNAMIC5)
 endif
 
-SOURCES = Pci.cpp
 
-OBJECTS = $(SOURCES:.cpp=.o)
+SOURCES = Pci.cpp           
+
+OBJECTS = $(SOURCES:.cpp=.o) $(NASMSRCS:.asm=.o)
 INCLUDE = -I$(INCDIR) -I. -I..
 
 all : $(TARGET)
+
 
 $(LIB_STATIC): $(OBJECTS)
 	rm -f $@
@@ -27,7 +28,7 @@ $(LIB_STATIC): $(OBJECTS)
 ifneq ($(BUILD_TARGET),ELF)
 $(LIB_IMPORT): $(LIB_DYNAMIC)
 $(LIB_DYNAMIC): $(OBJECTS)
-	$(LD) --export-all-symbols --out-implib $(LIB_IMPORT) -o $@ $(OBJECTS) -L$(MONADIR)/lib -lmonalibc -lmonapi-imp
+	$(LD) --export-all-symbols --out-implib $(LIB_IMPORT) -o $@ $(OBJECTS) -L$(LIBDIR) -lmonalibc -lmonapi-imp 
 	$(STRIP) $@
 
 $(LIB_DYNAMIC5): $(LIB_DYNAMIC)
@@ -37,7 +38,11 @@ endif
 
 .SUFFIXES: .cpp .o
 .cpp.o:
-	$(CXX) -c -o $(<:.cpp=.o) $(CXXFLAGS) $(INCLUDE) $<
+	$(CXX) -c $(CXXFLAGS) $(INCLUDE) $<
+
+.SUFFIXES: .asm .o
+.asm.o:
+	$(NASM) $(NFLAGS) -o $@ $<
 
 depend:
 	$(CXX) -MM $(INCLUDE) $(CXXFLAGS) $(SOURCES) > dependencies
@@ -56,9 +61,10 @@ ifneq ($(BUILD_TARGET),ELF)
 	$(INSTALL) -m 0644 $(LIB_IMPORT) $(LIBDIR)/
 	mkdir -p $(BINDIR)/LIBS
 	$(INSTALL) $(LIB_DYNAMIC5) $(BINDIR)/LIBS/
+	$(INSTALL) -m 0644 $(LIB_STATIC) $(LIBDIR)/
 endif
 	mkdir -p $(INCDIR)/pci
-	$(INSTALL) -m 0644 ./pci/*.h $(INCDIR)/pci
+	$(INSTALL) -m 0644 pci/*.h $(INCDIR)/pci/
 
 uninstall:
 	rm -f $(LIBDIR)/$(LIB_STATIC)
@@ -66,7 +72,10 @@ ifneq ($(BUILD_TARGET),ELF)
 	rm -f $(LIBDIR)/$(LIB_IMPORT)
 	rm -f $(BINDIR)/LIBS/$(LIB_DYNAMIC5)
 endif
-	rm -f $(INCDIR)/pci.h
-	rm -r $(INCDIR)/pci
+	for file in *.h; \
+	do \
+	  rm -f $(INCDIR)/pci/$$file; \
+	done
+#	rmdir $(INCDIR)/pci
 
 include dependencies
