--- a/MonaNew/tool/fat_write/configure.ac
+++ b/MonaNew/tool/fat_write/configure.ac
@@ -25,5 +25,9 @@ AC_C_CONST
 AC_PROG_GCC_TRADITIONAL
 AC_CHECK_FUNCS([memset mkdir])
 
+AM_CHECK_MONADIR
+
+AC_SUBST(MONADIR)
+
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
