*** empty log message ***

--- a/MonaNew/tool/fat_write/Makefile.am
+++ b/MonaNew/tool/fat_write/Makefile.am
@@ -1,8 +1,8 @@
 bin_PROGRAMS = fat_write
 fat_write_CXXFLAGS = -g
-fat_write_SOURCES  = VirtualFloppy.cpp VirtualFloppy.h fat.cpp fat.h IStorageDevice.h file.h main.cpp types.h endian_util.cpp endian_util.h
+fat_write_SOURCES  = VirtualFloppy.cpp VirtualFloppy.h fat.cpp fat.h IStorageDevice.h file.h main.cpp types.h endian_util.cpp endian_util.h fat_template.img
 
-fat_write_datadir = $(datadir)/fat_write
+fat_write_datadir = $(pkgdatadir)
 fat_write_data_DATA = fat_template.img
 
 mona_includedir = @MONADIR@/include
