--- a/MonaNew/tool/fat_write/Makefile.in
+++ b/MonaNew/tool/fat_write/Makefile.in
@@ -178,8 +178,8 @@ sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 fat_write_CXXFLAGS = -g
-fat_write_SOURCES = VirtualFloppy.cpp VirtualFloppy.h fat.cpp fat.h IStorageDevice.h file.h main.cpp types.h endian_util.cpp endian_util.h
-fat_write_datadir = $(datadir)/fat_write
+fat_write_SOURCES = VirtualFloppy.cpp VirtualFloppy.h fat.cpp fat.h IStorageDevice.h file.h main.cpp types.h endian_util.cpp endian_util.h fat_template.img
+fat_write_datadir = $(pkgdatadir)
 fat_write_data_DATA = fat_template.img
 mona_includedir = @MONADIR@/include
 mona_include_HEADERS = fat.cpp VirtualFloppy.h fat.h file.h types.h
