*** empty log message ***

--- a/MonaNew/Makefile
+++ b/MonaNew/Makefile
@@ -1,6 +1,6 @@
 all:
 	cd config && ./configure && make && make install
-	cd tool/fat_write && make && make install
+	cd tool/fat_write && ./configure && make && make install
 	cd tool/t5lzma && ./configure && make && make install
 	cd tool/bim2bin && make && make install
 	cd core/firstboot && make && make install
