--- a/MonaNew/tool/fat_write/config.h.in
+++ b/MonaNew/tool/fat_write/config.h.in
@@ -63,5 +63,9 @@
 /* Version number of package */
 #undef VERSION
 
+/* Define to 1 if your processor stores words with the most significant byte
+   first (like Motorola and SPARC, unlike Intel and VAX). */
+#undef WORDS_BIGENDIAN
+
 /* Define to empty if `const' does not conform to ANSI C. */
 #undef const
