--- a/MonaNew/tool/fat_write/configure.ac
+++ b/MonaNew/tool/fat_write/configure.ac
@@ -30,8 +30,7 @@ AM_CHECK_MONADIR
 AC_SUBST(MONADIR)
 
 # Checks for ENDIAN
-# don't use this! http://gemma.apple.com/jp/documentation/MacOSX/Conceptual/universal_binary/universal_binary_compiling/chapter_2_section_7.html
-# AC_C_BIGENDIAN
+AC_C_BIGENDIAN
 
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
