--- a/MonaNew/core/file_server/Makefile
+++ b/MonaNew/core/file_server/Makefile
@@ -1,5 +1,5 @@
 TARGET  = FILE
-SOURCES = main.cpp file.cpp bzip2.cpp dtk5s.cpp FDCDriver.cpp fat.cpp fs.cpp IDEDriver.cpp ISO9660File.cpp ISO9660FileSystem.cpp ISO9660FileSystemManager.cpp FatFileSystemManager.cpp
+SOURCES = main.cpp file.cpp bzip2.cpp dtk5s.cpp FDCDriver.cpp fat.cpp fs.cpp IDEDriver.cpp ISO9660File.cpp ISO9660FileSystem.cpp ISO9660FileSystemManager.cpp FatFileSystemManager.cpp endian_util.cpp
 INSTDIR = $(BINDIR)
 
 ADDLINK    = -lmonalibc
