--- a/experimental/file_server_for_linux/src/Makefile.in
+++ b/experimental/file_server_for_linux/src/Makefile.in
@@ -156,7 +156,7 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-file_server_CXXFLAGS = -DON_LINUX
+file_server_CXXFLAGS = -DON_LINUX -g -Wall -O3
 file_server_SOURCES = Directory.h\
 FDCDriver.cpp\
 FDCDriver.h\
