--- a/experimental/file_server_for_linux/configure.ac
+++ b/experimental/file_server_for_linux/configure.ac
@@ -22,5 +22,6 @@ AC_TYPE_SIZE_T
 # Checks for library functions.
 
 AC_CONFIG_FILES([Makefile
-                 src/Makefile])
+                 src/Makefile
+                 fsclient/Makefile])
 AC_OUTPUT
