--- a/experimental/file_server_for_linux/Makefile.in
+++ b/experimental/file_server_for_linux/Makefile.in
@@ -146,7 +146,7 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-SUBDIRS = src
+SUBDIRS = fsclient src
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
 
