--- a/mona/Makefile.new
+++ b/mona/Makefile.new
@@ -9,8 +9,13 @@ export PATH
 
 all:
 	#cd config && ./configure && make && make install
-	cd tool/fat_write && ./configure --prefix=$(PREFIX) && make && make install
-	cd tool/t5lzma && ./configure && make && make install
+	echo $(FAT_WRITE_MK_EXIST)
+	cd tool/fat_write &&\
+	if ! [ -f Makefile ]; then ./configure --prefix=$(PREFIX); fi; \
+	make && make install
+	cd tool/t5lzma &&\
+	if ! [ -f Makefile ]; then ./configure; fi; \
+	make && make install
 	cd tool/bim2bin && make && make install
 	cd core/firstboot && make && make install
 	cd core/PEAnalyzerLib && make && make install
